styles/components/_intro.scss
// Intro page.
.container-video-intro {
  position: relative;

  &.video-no-played {
    .header-inner-content__img {
      width: 140vh !important;
      height: 140vh !important;
      border-radius: 50%;
      margin-left: 0 !important;
      margin-top: 0 !important;
      z-index: 999 !important;
      bottom: 50% !important;
      margin-bottom: calc(-70vh + 6px) !important;
      position: relative;

      // @media (orientation: portrait) {
      //   width: 140vh !important;
      //   height: 140vh !important;
      //   margin-bottom: calc(-70vh + 6px) !important;
      // }

      // @media (orientation: portrait) and (min-width: map-get($grid-breakpoints, 'md')) {
      //   left: calc(-20vh - 50px) !important;
      // }

      @media (orientation: landscape) {
        width: 122vw !important;
        height: 122vw !important;
        margin-bottom: calc(-61vw + 6px) !important;
        left: calc(-10.5vw - 12px) !important;
      }

      // @todo: Those are very specific breakpoints 1:1 tailored to some bugs
      // introduced with the vertical media queries.
      // Instead, a full refactor of the maginified "O" should be done.
      @media (min-width: map-get($grid-breakpoints, 'md')) and (orientation: portrait) {
        left: calc(-20vh - 30px) !important;
      }

      @media (max-width: map-get($grid-breakpoints, 'md')) and (max-height: $round-image-vertical-breakpoint-sm) and (orientation: landscape) {
        left: calc(-10.5vw - 6px) !important;
      }

      @media (max-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-xsm) and (orientation: portrait) {
        left: calc(-20vh - 30px) !important;
      }

      @media (max-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-sm) and (orientation: portrait) {
        left: calc(50vw - 70vh) !important;
      }
    }

    .content-header__container {
      border-radius: 0%;
      // padding: 0;

      &.wrapper {
        height: 100vh;
      }
    }

    .video-paused {
      video {
        opacity: .5;
        transition: opacity 1s;
      }
    }
  }

  .mute_button {
    position: absolute;
    bottom: 18px;
    right: 8px;
    z-index: 101;

    .is-transitioning &,
    .blocked & {
      display: none;
    }

    .icon-button {
      width: 48px;
      height: 48px;
    }


    @include media-breakpoint-up(sm) {
      bottom: 50px;
      right: 30px;

      .icon-button {
        width: 64px;
        height: 64px;
      }
    }

    // Smaller on small heights
    @media (min-width: map-get($grid-breakpoints, 'sm')) and (max-height: $round-image-vertical-breakpoint-md) {
      bottom: 18px;
      right: 24px;

      .icon-button {
        width: 48px;
        height: 48px;
      }
    }
  }

  video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: all 0.2s;
  }

  .video-circle {
    video {
      border-radius: 50%;
      //position: absolute;
      width:400px;
      height: 400px;
    }
  }

  .video-skipped {
    transition: all 0.1s;
    //border-radius: 50%;
  }

  .btn-begin-experience {
    background-color: $color-white;
    border-radius: 50%;
    width: 200px;
    height: 200px;
    box-shadow: $default-box-shadow;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: .15em;
    color: $color-black;
    white-space: break-spaces;
    position: absolute;
    bottom: 50%;
    left: 50%;
    transform: translate(-50%, 50%);
    z-index:60;
    opacity:0;
    transition: opacity 1s;
    &.paused{
      opacity: 1;
    }
    &:hover {
      background-color: rgba($color-white, .8);
    }

    &.playing {
      &:hover {
        cursor: default;
      }
    }
  }

  .btn-skip-intro {
    min-width: 108px;
    border-radius: 20px;
    padding: .5em 1em;
    color: $color-black;
    font-size: 14px;
    letter-spacing: .1em;
    text-transform: uppercase;
    background-color: rgba($color-white, .9);
    transition: $default-transition;
    position: fixed;
    bottom: 5vh;
    left: 50%;
    margin-top: 40vh;
    transform: translate(-50%, 0%);
    opacity: 0;
    z-index:60;

    &:hover {
      background-color: rgba($color-white, 1);
    }
  }
}

body.animate_video {
  overflow: hidden;

  // Mobile browsers have less RAM for animating video zoom, so fallback to a
  // fade out, size change, then fade in.
  &.is-mobile .header-inner-content__img {
    animation: flash ($scroll-down-transition-duration * 2);
  }
}

body.deanimate_video {
  // Mobile browsers have less RAM for animating video zoom, so fallback to a
  // fade out, size change, then fade in.
  &.is-mobile .header-inner-content__img {
    animation: fadeIn ($scroll-down-transition-duration * 2);
  }
}

.main-container.full_video{
  .header-menu,
  .embla__button,
  .line-separator,
  .actions{
    display:none;
  }
  .embla_slide_present.no_selected{
    display:none;
  }
}

